--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
+    "html-to-image": "^1.10.8",
+    "image-converter-pro": "^1.0.2",
     "next": "13.0.2",
     "react": "18.2.0",
+    "react-click-away-listener": "^2.2.2",
     "react-dom": "18.2.0",
-    "react-draggable": "^4.4.5"
+    "react-draggable": "^4.4.5",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
